--- a/css/second.css
+++ b/css/second.css
@@ -259,8 +259,8 @@ h2:hover {
         display: block;
     }
     .video1{
-        height: 480px;
-        width: 700px;
+        height: 450px;
+        width:800pa;
     }
 
 
