--- a/css/second.css
+++ b/css/second.css
@@ -171,14 +171,14 @@ h2:hover {
     margin: 0 auto;
 }
 .videoWar{
+    height: 800px;
     text-align: center;
     background: url(../images/5269eaba7d8c8.jpg);
     background-size: cover;
 }
 .video1{
-    margin: 0;
-    height: 204px;
-    width: 300px;
+    height: 768px;
+    width: 1024px;
 }
 
 
@@ -258,10 +258,19 @@ h2:hover {
         /*边框圆角*/
         display: block;
     }
-    .video1{
+       .videoWar {
         height: 450px;
-        width:800px;
+        text-align: center;
+
+        background: url(../images/5269eaba7d8c8.jpg);
+        background-size: cover;
+
     }
+    .video1 {
+        height: 450px;
+        width: 800px;
+    }
+
 
 
 
